--- a/w1.html
+++ b/w1.html
@@ -3,15 +3,21 @@
     <head>
         <title>
             Mtek
-            <h1>Develop your buisness with us</h1>
+          
         </title>
         <link rel="stylesheet" href="Stylew1.css">
 
     </head>
    
     <body>
+      <div class="logo">M<span>tek</span></div>
       <h1>
-        We have solutionsof your tech problems
+        We have solutions of your tech problems
+        <h2>Accelerate Your Growth with Proven Digital Marketing Strategies</h2>
+        <p>We combine data-driven insights and innovative digital marketing tactics to help you outshine the competition.</p>
+        </h1>
+        
       </h1>
+  
     </body>
 </html>
