--- a/w1.html
+++ b/w1.html
@@ -15,9 +15,11 @@
         We have solutions of your tech problems
         <h2>Accelerate Your Growth with Proven Digital Marketing Strategies</h2>
         <p>We combine data-driven insights and innovative digital marketing tactics to help you outshine the competition.</p>
-        </h1>
-        
+       
       </h1>
+      <a href="https://www.facebook.com/">Facebook</a>
+      <a href="https://www.youtube.com/watch?v=bixR-KIJKYM&list=PLEiEAq2VkUULa5aOQmO_al2VVmhC-eqeI">Youtube</a>
+
   
     </body>
 </html>
