--- a/w1.html
+++ b/w1.html
@@ -12,11 +12,15 @@
     <body>
       <div class="logo">M<span>tek</span></div>
       <h1>
-        We have solutions of your tech problems
-        <h2>Accelerate Your Growth with Proven Digital Marketing Strategies</h2>
+        Welcome to Mtek
+      
+      <h2>
+         We have solutions of your tech problems</h2>
+        <h3>Accelerate Your Growth with Proven Digital Marketing Strategies</h3>
         <p>We combine data-driven insights and innovative digital marketing tactics to help you outshine the competition.</p>
        
       </h1>
+      <img src="mtek.png" alt="Mtek.home page">
       <a href="https://www.facebook.com/">Facebook</a>
       <a href="https://www.youtube.com/watch?v=bixR-KIJKYM&list=PLEiEAq2VkUULa5aOQmO_al2VVmhC-eqeI">Youtube</a>
 
