--- a/w1.html
+++ b/w1.html
@@ -24,6 +24,26 @@
       <a href="https://www.facebook.com/">Facebook</a>
       <a href="https://www.youtube.com/watch?v=bixR-KIJKYM&list=PLEiEAq2VkUULa5aOQmO_al2VVmhC-eqeI">Youtube</a>
 
-  
+  <div>
+    <h1>
+      Do you want to grow your business?
+Do you want to develop your business health?
+
+    </h1>
+    <h2>
+      Are you trying to find a creative firm that can help you grow your company? Do not hesitate to get in touch with us.
+    </h2>
+    <h3>
+      <p>
+        Are you looking for a creative agency to help grow your business, or simply curious about what we do?
+      </p>
+      <p>We would love to hear from you! Use the contact form below to send us a message, and we will get back to you shortly.</p>
+
+<p>Prefer a more direct approach? Feel free to email us at
+  mktechbd@gmail.com.</p>
+  <p> Call or text to us directly +46764304702 we are here to help!</p> 
+
+    </h3>
+  </div>
     </body>
 </html>
