--- a/w1.html
+++ b/w1.html
@@ -44,6 +44,19 @@ Do you want to develop your business health?
   <p> Call or text to us directly +46764304702 we are here to help!</p> 
 
     </h3>
+    <form>
+      <fieldset>
+        <label for="name">Your name</label>
+        <input id="name" type="name">
+
+        <label for="email">Your email</label>
+        <input id="email" type="email">
+
+        <label for="message">Your message</label>
+        <textarea id="message" name ="massage" rows="4"></textarea> ></textarea>
+      </fieldset>'
+      <input type="submit" value="send">
+    </form>
   </div>
     </body>
 </html>
