--- a/Homepage1.html
+++ b/Homepage1.html
@@ -25,5 +25,6 @@
       <a href="https://www.youtube.com/watch?v=bixR-KIJKYM&list=PLEiEAq2VkUULa5aOQmO_al2VVmhC-eqeI">Youtube</a>
 
   <a href="Contactus4.html">Contact Us</a>
+  <a href="Whatwedo2.html">What we do?</a>
     </body>
 </html>
