--- a/Whatwedo2.html
+++ b/Whatwedo2.html
@@ -1,6 +1,33 @@
 <!DOCTYPE html>
 <html>
+    <head>
+
+    </head>
     <body>
+        <div>
+            <h1>
+                Search Engine Optimization (SEO)
+            </h1>
+            <p>
+                1. Research and analyze keywords. 
+                </p>
+                <p>
+                    2. Improve on-page components such as content, organization, and meta tags. 
+                </p>
+                <p>
+                    3. Build high-quality backlinks and boost domain authority. 
+                </p>
+                <p>
+                    4. Conduct technical audits for SEO.
+                </p>
+        </div>
+    
+
+
+
+
+
+        
         <a href="Homepage1.html">Home Page</a>
     </body>
 </html>
