--- a/Whatwedo2.html
+++ b/Whatwedo2.html
@@ -21,7 +21,48 @@
                     4. Conduct technical audits for SEO.
                 </p>
         </div>
-    
+        <div>
+            <h1>
+                Social Media Marketing(SMM)
+            </h1>
+            <p>
+           1. Create and maintain profiles on networks including Facebook, Instagram, LinkedIn, Twitter, and TikTok.</p>
+           <p>
+    2. Create calendars of interesting material. 
+</p> 
+<P>
+    3. Execute focused advertising efforts and track engagement indicators. 
+</P>
+<p>
+    4. Foster and cultivate relationships within the community. 
+</p>
+     </div>
+     <div>
+        <h1>
+            Search Engine Marketing (SEM)
+        </h1>
+        <p>
+            1. Oversee pay-per-click (PPC) advertising campaigns on Bing Ads and Google Ads.</p> 
+<p>
+   2. Use audience targeting and A/B testing to maximize ad success. 
+</p>
+<p>
+    3. Offer ROI reporting and analytics. 
+</p>
+     </div>
+    <div>
+        <h1>
+            Analytics and Reporting
+        </h1>
+        <p>
+            1. To monitor performance, use tools like SEMrush, HubSpot, and Google Analytics.</p> 
+<p>
+    2. Offer thorough reports with insights that may be put to use. 
+</p>
+<p>
+    3. Recognize patterns and suggest tactical modifications. 
+</p>
+    </div>
 
 
 
