--- a/Homepage1.html
+++ b/Homepage1.html
@@ -26,5 +26,6 @@
 
   <a href="Contactus4.html">Contact Us</a>
   <a href="Whatwedo2.html">What we do?</a>
+  <a href="Aboutus3.html">About Us</a>
     </body>
 </html>
