--- a/Aboutus3.html
+++ b/Aboutus3.html
@@ -22,13 +22,19 @@
         </div>
         <div>
             <h1>
-                
+                Meet the Team
             </h1>
+            <p>
+                Our team is a blend of creative thinkers, data enthusiasts, and digital experts, united by a passion for helping businesses grow. From strategists to designers, every member of our team brings unique skills to the table.
+            </p>
         </div>
         <div>
             <h1>
-                
+                Let’s Connect
             </h1>
+            <p>
+                We’re more than just a digital marketing agency; we’re your growth partners. Ready to take your business to new heights? Let’s make it happen together. Book a Consultation.
+            </p>
         </div>
         <a href="Homepage1.html">Home Page</a>
     </body>
