--- a/Aboutus3.html
+++ b/Aboutus3.html
@@ -30,11 +30,25 @@
         </div>
         <div>
             <h1>
-                Let’s Connect
+                Let is Connect
             </h1>
             <p>
-                We’re more than just a digital marketing agency; we’re your growth partners. Ready to take your business to new heights? Let’s make it happen together. Book a Consultation.
+                We are more than just a digital marketing agency; we are your growth partners. Ready to take your business to new heights? Let is make it happen together. Book a Consultation.
             </p>
+        </div>
+        <div>
+            <div>
+                <img src="Bellal.jpg" alt="Aboutus3">
+            </div>
+            <div>
+                <img src="Sajjad.jpg" alt="Aboutus3">
+            </div>
+            <div>
+                <img src="Limon.jpg" alt="Aboutus3">
+            </div>
+            <div>
+                <img src="Motiur.jpg" alt="Aboutus3">
+            </div>
         </div>
         <a href="Homepage1.html">Home Page</a>
     </body>
