--- a/Homepage1.html
+++ b/Homepage1.html
@@ -20,7 +20,7 @@
         <p>We combine data-driven insights and innovative digital marketing tactics to help you outshine the competition.</p>
        
       </h1>
-      <img src="mtek.png" alt="Mtek.home page">
+      <img src="mtek.png" alt="Mtek.home page" class="Mtek">
       <a href="https://www.facebook.com/">Facebook</a>
       <a href="https://www.youtube.com/watch?v=bixR-KIJKYM&list=PLEiEAq2VkUULa5aOQmO_al2VVmhC-eqeI">Youtube</a>
 
