--- a/Homepage1.html
+++ b/Homepage1.html
@@ -10,22 +10,33 @@
     </head>
    
     <body>
+      <!--Here is my company logo which i set outside in my main content-->
       <div class="logo">M<span>tek</span></div>
-      <h1>
-        Welcome to Mtek
-      
-      <h2>
-         We have solutions of your tech problems</h2>
-        <h3>Accelerate Your Growth with Proven Digital Marketing Strategies</h3>
-        <p>We combine data-driven insights and innovative digital marketing tactics to help you outshine the competition.</p>
-       
-      </h1>
-      <img src="mtek.png" alt="Mtek.home page" class="Mtek">
-      <a href="https://www.facebook.com/">Facebook</a>
-      <a href="https://www.youtube.com/watch?v=bixR-KIJKYM&list=PLEiEAq2VkUULa5aOQmO_al2VVmhC-eqeI">Youtube</a>
-
-  <a href="Contactus4.html">Contact Us</a>
-  <a href="Whatwedo2.html">What we do?</a>
-  <a href="Aboutus3.html">About Us</a>
+      <!--Here is coming my main content-->
+      <div class="main-content">
+        <h1>
+          Welcome to Mtek <!--Here is use h1 for main heading-->
+        </h1>
+        <h2> <!--Here is use h2 for main sub-heading-->
+           We have solutions of your tech problems
+        </h2>
+        <h3> <!--Here is use h3 for another sub-heading-->
+          Accelerate Your Growth with Proven Digital Marketing Strategies
+        </h3>
+          <p><!--Here is use p for general text-->
+            We combine data-driven insights and innovative digital marketing tactics to help you outshine the competition.
+          </p>
+          <!--Here is set a picture for company adress in left bottom-->
+         <img src="mtek.png" alt="Mtek.home page" class="Mtek"> 
+      </div>
+   <!--Here is some links which i set outside the main content -->
+      <div class="links-container">
+        <a href="https://www.facebook.com/">Facebook</a>
+        <a href="https://www.youtube.com/watch?v=bixR-KIJKYM&list=PLEiEAq2VkUULa5aOQmO_al2VVmhC-eqeI">Youtube</a>
+      <a href="Contactus4.html">Contact Us</a>
+    <a href="Whatwedo2.html">What we do?</a>
+    <a href="Aboutus3.html">About Us</a>
+      </div>
+   
     </body>
 </html>
