--- a/Homepage1.html
+++ b/Homepage1.html
@@ -32,12 +32,13 @@
    <!--Here is some left links which i set outside the main content -->
       <div class="left-links">
         <a href="https://www.facebook.com/" class="external-link"> <!--This is for facebook logo-->
-          <img src="Facebook.jpg" alt="Facebook Logo">Facebook</a>
+          <img src="Facebook.jpg" alt="Facebook Logo"></a>
 
         <a href="https://www.youtube.com/watch?v=bixR-KIJKYM&list=PLEiEAq2VkUULa5aOQmO_al2VVmhC-eqeI" class="external-link">
-          <img src="Youtube.jpg" alt="YouTube Logo">Youtube</a> <!--This is for Youtube logo-->
-
-      <a href="Contactus4.html">Contact Us</a>
+          <img src="Youtube.jpg" alt="YouTube Logo"></a> <!--This is for Youtube logo-->
+<!--Here is some top links which i set outside the main content -->
+<div class="top-links">
+    <a href="Contactus4.html">Contact Us</a>
     <a href="Whatwedo2.html">What we do?</a>
     <a href="Aboutus3.html">About Us</a>
       </div>
