--- a/Aboutus3.html
+++ b/Aboutus3.html
@@ -2,8 +2,12 @@
 <html>
     <head>
 
+        <title>
+            About us- Mtek
+        </title>
+        <link rel="stylesheet" href="Stylew1.css">
     </head>
-    <body>
+    <body class="About-us">
         <div>
             <h1>
                 Who We Are
@@ -30,7 +34,19 @@
         </div>
         <div>
             <h1>
-                Let is Connect
+                Why Choose Mtek?
+            </h1>
+            <p>
+                Your Growth is Our Priority. Proven Track Record: We've helped numerous businesses skyrocket their digital presence.
+                Tailored Solutions: We don’t believe in one-size-fits-all. Every strategy is customized for your needs.
+                Data-Driven Approach: Our decisions are backed by data and performance insights to drive results.
+                Creative Team: Our creative team crafts compelling campaigns that engage your audience.
+            </p>
+
+        </div>
+        <div>
+            <h1>
+                Let's Connect
             </h1>
             <p>
                 We are more than just a digital marketing agency; we are your growth partners. Ready to take your business to new heights? Let is make it happen together. Book a Consultation.
