--- a/Homepage1.html
+++ b/Homepage1.html
@@ -9,7 +9,7 @@
 
     </head>
    
-    <body>
+    <body class="Homepage1">   <!--Here i set the name of individualpage and it will help me edit differnt page in one css file-->
       <!--Here is my company logo which i set outside in my main content-->
       <div class="logo">M<span>tek</span></div>
       <!--Here is coming my main content-->
@@ -38,9 +38,11 @@
           <img src="Youtube.jpg" alt="YouTube Logo"></a> <!--This is for Youtube logo-->
 <!--Here is some top links which i set outside the main content -->
 <div class="top-links">
-    <a href="Contactus4.html">Contact Us</a>
-    <a href="Whatwedo2.html">What we do?</a>
-    <a href="Aboutus3.html">About Us</a>
+  <a href="Whatwedo2.html">What we do?</a>
+  <a href="Aboutus3.html">About Us</a>
+  <a href="Contactus4.html">Contact Us</a>
+   
+    
       </div>
    
     </body>
