--- a/Homepage1.html
+++ b/Homepage1.html
@@ -1,49 +1,44 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>
-            Mtek
-          
-        </title>
-        <link rel="stylesheet" href="Stylew1.css">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home Page</title>
+    <link rel="stylesheet" href="Stylew1.css">
+</head>
+<body class="Homepage1">
+    <!-- Header Section with Logo -->
+    <header>
+        <div class="logo">M<span>tek</span></div>
+    </header>
 
-    </head>
-   
-    <body class="Homepage1">   <!--Here i set the name of individualpage and it will help me edit differnt page in one css file-->
-      <!--Here is my company logo which i set outside in my main content-->
-      <div class="logo">M<span>tek</span></div>
-      <!--Here is coming my main content-->
-      <div class="main-content">
-        <h1>
-          Welcome to Mtek <!--Here is use h1 for main heading-->
-        </h1>
-        <h2> <!--Here is use h2 for main sub-heading-->
-           We have solutions of your tech problems
-        </h2>
-        <h3> <!--Here is use h3 for another sub-heading-->
-          Accelerate Your Growth with Proven Digital Marketing Strategies
-        </h3>
-          <p><!--Here is use p for general text-->
+    <!-- Main Content -->
+    <main class="main-content">
+        <h1>Welcome to Mtek</h1> <!-- Main heading -->
+        <h2>We have solutions for your tech problems</h2> <!-- Subheading -->
+        <h3>Accelerate Your Growth with Proven Digital Marketing Strategies</h3> <!-- Subheading -->
+        <p>
             We combine data-driven insights and innovative digital marketing tactics to help you outshine the competition.
-          </p>
-          <!--Here is set a picture for company adress in left bottom-->
-         <img src="mtek.png" alt="Mtek.home page" class="Mtek"> 
-      </div>
-   <!--Here is some left links which i set outside the main content -->
-      <div class="left-links">
-        <a href="https://www.facebook.com/" class="external-link"> <!--This is for facebook logo-->
-          <img src="Facebook.jpg" alt="Facebook Logo"></a>
+        </p>
+        <!-- Company image -->
+        <img src="mtek.png" alt="Mtek Home Page" class="Mtek">
+    </main>
 
+    <!-- Left Links (Social Media) -->
+    <aside class="left-links">
+        <a href="https://www.facebook.com/" class="external-link">
+            <img src="Facebook.jpg" alt="Facebook Logo">
+        </a>
         <a href="https://www.youtube.com/watch?v=bixR-KIJKYM&list=PLEiEAq2VkUULa5aOQmO_al2VVmhC-eqeI" class="external-link">
-          <img src="Youtube.jpg" alt="YouTube Logo"></a> <!--This is for Youtube logo-->
-<!--Here is some top links which i set outside the main content -->
-<div class="top-links">
-  <a href="Whatwedo2.html">What we do?</a>
-  <a href="Aboutus3.html">About Us</a>
-  <a href="Contactus4.html">Contact Us</a>
-   
-    
-      </div>
-   
-    </body>
+            <img src="Youtube.jpg" alt="YouTube Logo">
+        </a>
+    </aside>
+
+    <!-- Top Navigation Links -->
+    <nav class="top-links">
+        <a href="Whatwedo2.html">What we do?</a>
+        <a href="Aboutus3.html">About Us</a>
+        <a href="Contactus4.html">Contact Us</a>
+    </nav>
+</body>
 </html>
