--- a/Homepage1.html
+++ b/Homepage1.html
@@ -20,6 +20,8 @@
         <p>
             We combine data-driven insights and innovative digital marketing tactics to help you outshine the competition.
         </p>
+        <p>Do you want to more? Please Click Here</p>
+        <a href="Whatwedo2.html">More</a>
         <!-- Company image -->
         <img src="mtek.png" alt="Mtek Home Page" class="Mtek">
     </main>
