--- a/Whatwedo2.html
+++ b/Whatwedo2.html
@@ -85,7 +85,9 @@
     3. Recognize patterns and suggest tactical modifications. 
 </p>
     </div>
-      
-        <a href="Homepage1.html">Home Page</a>
+      <h2> Do you want to know Who we are?
+    </h2>
+   <p>Please click here to know about us!</p>
+   <a href="Aboutus3.html">About Us</a>
     </body>
 </html>
