--- a/Aboutus3.html
+++ b/Aboutus3.html
@@ -69,13 +69,8 @@
         <p>
             We are more than just a digital marketing agency; we are your growth partners. 
             Ready to take your business to new heights? Let's make it happen together. 
-            <a href="Contactus4.html">Book a Consultation</a>.
+            <a href="Contactus4.html">Book a Consaltation</a>
         </p>
     </section>
-
-    <!-- Footer -->
-    <footer>
-        <a href="Homepage1.html" class="btn">Home Page</a>
-    </footer>
 </body>
 </html>
